// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Success renders content tailored to Caring Leave 1`] = `
<Fragment>
  <Title>
    You submitted your application
  </Title>
  <p
    className="margin-bottom-5"
  >
    <Trans
      i18nKey="pages.claimsSuccess.claimantApplicationId"
      values={
        Object {
          "absence_id": "NTN-111-ABS-01",
        }
      }
    />
  </p>
  <div
    className="measure-6"
  >
    <Heading
      level="2"
    >
      <SvgIconPhone
        className="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height={30}
        width={30}
      />
      We may need more information from you
    </Heading>
    <Trans
      components={
        Object {
          "contact-center-phone-link": <a
            href="tel:(833) 344-7365"
          />,
          "li": <li />,
          "reductions-employer-benefits-link": <a
            href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefit-reductions#earned-time-off-through-your-employer-"
          />,
          "reductions-overview-link": <a
            href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefit-reductions"
          />,
          "ul": <ul
            className="usa-list"
          />,
        }
      }
      i18nKey="pages.claimsSuccess.reportReductionsProcess"
    />
    <Heading
      level="2"
    >
      <SvgIconCalendar
        className="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height={30}
        width={30}
      />
      What happens next
    </Heading>
    <Trans
      components={
        Object {
          "contact-center-phone-link": <a
            href="tel:(833) 344-7365"
          />,
          "li": <li />,
          "ul": <ul
            className="usa-list"
          />,
        }
      }
      i18nKey="pages.claimsSuccess.adjudicationProcess"
      tOptions={
        Object {
          "context": "caringLeave",
        }
      }
    />
    <UserFeedback
      url="https://www.mass.gov/paidleave-claimant-feedback"
    />
    <ButtonLink
      className="margin-top-4"
      href="/applications"
    >
      Return to applications
    </ButtonLink>
  </div>
</Fragment>
`;

exports[`Success renders content tailored to Caring Leave 2`] = `
Array [
  "Your application ID is ",
  <strong
    key="strong-1"
  >
    NTN-111-ABS-01
  </strong>,
]
`;

exports[`Success renders content tailored to Caring Leave 3`] = `
Array [
  <p
    key="p-0"
  >
    Call the Contact Center at 
    <a
      href="tel:(833) 344-7365"
      key="1"
    >
      (833) 344‑7365
    </a>
     if you’ll receive:
  </p>,
  <ul
    className="usa-list"
    key="1"
  >
    <li
      key="0"
    >
      Any 
      <a
        href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefit-reductions#earned-time-off-through-your-employer-"
        key="1"
      >
        benefits from your employer
      </a>
       that you’ll be using in addition to Massachusetts paid leave (for example, maternity leave, or paid sick time)
    </li>
    <li
      key="1"
    >
      Income from 
      <a
        href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefit-reductions"
        key="1"
      >
        any other sources
      </a>
       during your leave
    </li>
  </ul>,
]
`;

exports[`Success renders content tailored to Caring Leave 4`] = `
<ul
  className="usa-list"
  key="0"
>
  <li
    key="0"
  >
    Your employer has 10 business days to provide feedback on your application.
  </li>
   
  <li
    key="2"
  >
    We’ll confirm your eligibility and make sure that your documents are valid.
  </li>
   
  <li
    key="4"
  >
    After we’ve made a decision, you’ll receive an email notification with a link to details about the decision. Your employer will also get a copy of the decision.
  </li>
  <li
    key="5"
  >
    Once your application is approved, you can expect your first payment to arrive at the beginning of your fourth week of leave, if your leave has already started. If your leave starts in the future, you can expect your first payment 2-4 weeks after your leave starts. After that, you will receive your payments every week.
  </li>
  <li
    key="6"
  >
    If you need to end your leave early, you must call the DFML Contact Center at 
    <a
      href="tel:(833) 344-7365"
      key="1"
    >
      (833) 344‑7365
    </a>
    .
  </li>
</ul>
`;

exports[`Success renders content tailored to Family (Bonding Adoption) 1`] = `
<Fragment>
  <Title>
    You submitted your application
  </Title>
  <p
    className="margin-bottom-5"
  >
    <Trans
      i18nKey="pages.claimsSuccess.claimantApplicationId"
      values={
        Object {
          "absence_id": "NTN-111-ABS-01",
        }
      }
    />
  </p>
  <div
    className="measure-6"
  >
    <Heading
      level="2"
    >
      <SvgIconPhone
        className="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height={30}
        width={30}
      />
      We may need more information from you
    </Heading>
    <Trans
      components={
        Object {
          "contact-center-phone-link": <a
            href="tel:(833) 344-7365"
          />,
          "li": <li />,
          "reductions-employer-benefits-link": <a
            href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefit-reductions#earned-time-off-through-your-employer-"
          />,
          "reductions-overview-link": <a
            href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefit-reductions"
          />,
          "ul": <ul
            className="usa-list"
          />,
        }
      }
      i18nKey="pages.claimsSuccess.reportReductionsProcess"
    />
    <Heading
      level="2"
    >
      <SvgIconCalendar
        className="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height={30}
        width={30}
      />
      What happens next
    </Heading>
    <Trans
      components={
        Object {
          "contact-center-phone-link": <a
            href="tel:(833) 344-7365"
          />,
          "li": <li />,
          "ul": <ul
            className="usa-list"
          />,
        }
      }
      i18nKey="pages.claimsSuccess.adjudicationProcess"
      tOptions={
        Object {
          "context": "leaveNotInFuture",
        }
      }
    />
    <UserFeedback
      url="https://www.mass.gov/paidleave-claimant-feedback"
    />
    <ButtonLink
      className="margin-top-4"
      href="/applications"
    >
      Return to applications
    </ButtonLink>
  </div>
</Fragment>
`;

exports[`Success renders content tailored to Family (Bonding Adoption) 2`] = `
Array [
  "Your application ID is ",
  <strong
    key="strong-1"
  >
    NTN-111-ABS-01
  </strong>,
]
`;

exports[`Success renders content tailored to Family (Bonding Adoption) 3`] = `
Array [
  <p
    key="p-0"
  >
    Call the Contact Center at 
    <a
      href="tel:(833) 344-7365"
      key="1"
    >
      (833) 344‑7365
    </a>
     if you’ll receive:
  </p>,
  <ul
    className="usa-list"
    key="1"
  >
    <li
      key="0"
    >
      Any 
      <a
        href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefit-reductions#earned-time-off-through-your-employer-"
        key="1"
      >
        benefits from your employer
      </a>
       that you’ll be using in addition to Massachusetts paid leave (for example, maternity leave, or paid sick time)
    </li>
    <li
      key="1"
    >
      Income from 
      <a
        href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefit-reductions"
        key="1"
      >
        any other sources
      </a>
       during your leave
    </li>
  </ul>,
]
`;

exports[`Success renders content tailored to Family (Bonding Adoption) 4`] = `
<ul
  className="usa-list"
  key="0"
>
   
  <li
    key="1"
  >
    Your employer has 10 business days to provide feedback on your application.
  </li>
   
  <li
    key="3"
  >
    We’ll confirm your eligibility and make sure that your documents are valid.
  </li>
   
  <li
    key="5"
  >
    After we’ve made a decision, you’ll receive an email notification with a link to details about the decision. Your employer will also get a copy of the decision.
  </li>
  <li
    key="6"
  >
    Once your application is approved, you can expect your first payment to arrive at the beginning of your fourth week of leave, if your leave has already started. If your leave starts in the future, you can expect your first payment 2-4 weeks after your leave starts. After that, you will receive your payments every week.
  </li>
</ul>
`;

exports[`Success renders content tailored to Family (Bonding Future Adoption) 1`] = `
<Fragment>
  <Title>
    You submitted your application
  </Title>
  <p
    className="margin-bottom-5"
  >
    <Trans
      i18nKey="pages.claimsSuccess.claimantApplicationId"
      values={
        Object {
          "absence_id": "NTN-111-ABS-01",
        }
      }
    />
  </p>
  <div
    className="measure-6"
  >
    <Alert
      autoWidth={true}
      state="warning"
    >
      <Trans
        components={
          Object {
            "contact-center-phone-link": <a
              href="tel:(833) 344-7365"
            />,
          }
        }
        i18nKey="pages.claimsSuccess.proofRequired"
        tOptions={
          Object {
            "context": "bondingAdoptFosterFuture",
          }
        }
      />
    </Alert>
    <Heading
      level="2"
    >
      <SvgIconPhone
        className="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height={30}
        width={30}
      />
      We may need more information from you
    </Heading>
    <Trans
      components={
        Object {
          "contact-center-phone-link": <a
            href="tel:(833) 344-7365"
          />,
          "li": <li />,
          "reductions-employer-benefits-link": <a
            href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefit-reductions#earned-time-off-through-your-employer-"
          />,
          "reductions-overview-link": <a
            href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefit-reductions"
          />,
          "ul": <ul
            className="usa-list"
          />,
        }
      }
      i18nKey="pages.claimsSuccess.reportReductionsProcess"
    />
    <Heading
      level="2"
    >
      <SvgIconCalendar
        className="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height={30}
        width={30}
      />
      What happens next
    </Heading>
    <Trans
      components={
        Object {
          "contact-center-phone-link": <a
            href="tel:(833) 344-7365"
          />,
          "li": <li />,
          "ul": <ul
            className="usa-list"
          />,
        }
      }
      i18nKey="pages.claimsSuccess.adjudicationProcess"
      tOptions={
        Object {
          "context": "bondingAdoptFosterFuture",
        }
      }
    />
    <UserFeedback
      url="https://www.mass.gov/paidleave-claimant-feedback"
    />
    <ButtonLink
      className="margin-top-4"
      href="/applications"
    >
      Return to applications
    </ButtonLink>
  </div>
</Fragment>
`;

exports[`Success renders content tailored to Family (Bonding Future Adoption) 2`] = `
Array [
  "Your application ID is ",
  <strong
    key="strong-1"
  >
    NTN-111-ABS-01
  </strong>,
]
`;

exports[`Success renders content tailored to Family (Bonding Future Adoption) 3`] = `"After your child arrives in your home, you will need to upload, mail, or fax a document that shows your child’s placement date."`;

exports[`Success renders content tailored to Family (Bonding Future Adoption) 4`] = `
Array [
  <p
    key="p-0"
  >
    Call the Contact Center at 
    <a
      href="tel:(833) 344-7365"
      key="1"
    >
      (833) 344‑7365
    </a>
     if you’ll receive:
  </p>,
  <ul
    className="usa-list"
    key="1"
  >
    <li
      key="0"
    >
      Any 
      <a
        href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefit-reductions#earned-time-off-through-your-employer-"
        key="1"
      >
        benefits from your employer
      </a>
       that you’ll be using in addition to Massachusetts paid leave (for example, maternity leave, or paid sick time)
    </li>
    <li
      key="1"
    >
      Income from 
      <a
        href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefit-reductions"
        key="1"
      >
        any other sources
      </a>
       during your leave
    </li>
  </ul>,
]
`;

exports[`Success renders content tailored to Family (Bonding Future Adoption) 5`] = `
<ul
  className="usa-list"
  key="0"
>
  <li
    key="0"
  >
    Your employer has 10 days to provide feedback on your application.
  </li>
   
  <li
    key="2"
  >
    Once you’ve provided proof of placement, we’ll confirm your eligibility and make sure that your documents are valid.
  </li>
   
  <li
    key="4"
  >
    After we’ve made a decision, you’ll receive an email notification with a link to details about the decision.
  </li>
   
  <li
    key="6"
  >
    If you need to change your leave dates because your child arrived in your home earlier or later than expected, you must call the DFML Contact Center at 
    <a
      href="tel:(833) 344-7365"
      key="1"
    >
      (833) 344‑7365
    </a>
    .
  </li>
  <li
    key="7"
  >
    If your application is approved prior to your leave, you can expect your first payment to arrive about 3 weeks after your leave starts. Otherwise, you can expect your first payment 2-3 weeks after your leave is approved.
  </li>
</ul>
`;

exports[`Success renders content tailored to Family (Bonding Future Newborn) 1`] = `
<Fragment>
  <Title>
    You submitted your application
  </Title>
  <p
    className="margin-bottom-5"
  >
    <Trans
      i18nKey="pages.claimsSuccess.claimantApplicationId"
      values={
        Object {
          "absence_id": "NTN-111-ABS-01",
        }
      }
    />
  </p>
  <div
    className="measure-6"
  >
    <Alert
      autoWidth={true}
      state="warning"
    >
      <Trans
        components={
          Object {
            "contact-center-phone-link": <a
              href="tel:(833) 344-7365"
            />,
          }
        }
        i18nKey="pages.claimsSuccess.proofRequired"
        tOptions={
          Object {
            "context": "bondingNewbornFuture",
          }
        }
      />
    </Alert>
    <Heading
      level="2"
    >
      <SvgIconPhone
        className="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height={30}
        width={30}
      />
      We may need more information from you
    </Heading>
    <Trans
      components={
        Object {
          "contact-center-phone-link": <a
            href="tel:(833) 344-7365"
          />,
          "li": <li />,
          "reductions-employer-benefits-link": <a
            href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefit-reductions#earned-time-off-through-your-employer-"
          />,
          "reductions-overview-link": <a
            href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefit-reductions"
          />,
          "ul": <ul
            className="usa-list"
          />,
        }
      }
      i18nKey="pages.claimsSuccess.reportReductionsProcess"
    />
    <Heading
      level="2"
    >
      <SvgIconCalendar
        className="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height={30}
        width={30}
      />
      What happens next
    </Heading>
    <Trans
      components={
        Object {
          "contact-center-phone-link": <a
            href="tel:(833) 344-7365"
          />,
          "li": <li />,
          "ul": <ul
            className="usa-list"
          />,
        }
      }
      i18nKey="pages.claimsSuccess.adjudicationProcess"
      tOptions={
        Object {
          "context": "bondingNewbornFuture",
        }
      }
    />
    <div
      className="padding-top-2 margin-top-2"
    >
      <Heading
        level="2"
      >
        <SvgIconCopy
          className="margin-right-2 text-secondary text-middle"
          fill="currentColor"
          height={30}
          width={30}
        />
        If you gave birth, you may also be eligible for paid medical leave
      </Heading>
      <p>
        <Trans
          components={
            Object {
              "contact-center-phone-link": <a
                href="tel:(833) 344-7365"
              />,
              "medical-bonding-link": <a
                href="https://www.mass.gov/pfml-medical-bonding"
              />,
            }
          }
          i18nKey="pages.claimsSuccess.medicalLeaveAfterBirth"
        />
      </p>
    </div>
    <UserFeedback
      url="https://www.mass.gov/paidleave-claimant-feedback"
    />
    <ButtonLink
      className="margin-top-4"
      href="/applications"
    >
      Return to applications
    </ButtonLink>
  </div>
</Fragment>
`;

exports[`Success renders content tailored to Family (Bonding Future Newborn) 2`] = `
Array [
  "Your application ID is ",
  <strong
    key="strong-1"
  >
    NTN-111-ABS-01
  </strong>,
]
`;

exports[`Success renders content tailored to Family (Bonding Future Newborn) 3`] = `"After your child is born, you will need to upload, mail, or fax a document that shows your child’s date of birth."`;

exports[`Success renders content tailored to Family (Bonding Future Newborn) 4`] = `
Array [
  <p
    key="p-0"
  >
    Call the Contact Center at 
    <a
      href="tel:(833) 344-7365"
      key="1"
    >
      (833) 344‑7365
    </a>
     if you’ll receive:
  </p>,
  <ul
    className="usa-list"
    key="1"
  >
    <li
      key="0"
    >
      Any 
      <a
        href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefit-reductions#earned-time-off-through-your-employer-"
        key="1"
      >
        benefits from your employer
      </a>
       that you’ll be using in addition to Massachusetts paid leave (for example, maternity leave, or paid sick time)
    </li>
    <li
      key="1"
    >
      Income from 
      <a
        href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefit-reductions"
        key="1"
      >
        any other sources
      </a>
       during your leave
    </li>
  </ul>,
]
`;

exports[`Success renders content tailored to Family (Bonding Future Newborn) 5`] = `
<ul
  className="usa-list"
  key="0"
>
  <li
    key="0"
  >
    Your employer has 10 days to provide feedback on your application.
  </li>
   
  <li
    key="2"
  >
    Once you’ve provided proof of birth, we’ll confirm your eligibility and make sure that your documents are valid.
  </li>
   
  <li
    key="4"
  >
    After we’ve made a decision, you’ll receive an email notification with a link to details about the decision.
  </li>
   
  <li
    key="6"
  >
    If you need to change your leave dates because your child was born earlier or later than expected, you must call the DFML Contact Center at 
    <a
      href="tel:(833) 344-7365"
      key="1"
    >
      (833) 344‑7365
    </a>
    .
  </li>
  <li
    key="7"
  >
    If your application is approved prior to your leave, you can expect your first payment to arrive about 3 weeks after your leave starts. Otherwise, you can expect your first payment 2-3 weeks after your leave is approved.
  </li>
</ul>
`;

exports[`Success renders content tailored to Family (Bonding Future Newborn) 6`] = `
Array [
  "You can take up to 20 weeks of paid medical leave if you’re unable to work during your pregnancy and to recover from childbirth. Your health care provider determines how much medical leave you will need. Call the Contact Center at ",
  <a
    href="tel:(833) 344-7365"
    key="1"
  >
    (833) 344‑7365
  </a>,
  " if you need ",
  <a
    href="https://www.mass.gov/pfml-medical-bonding"
    key="3"
  >
    medical leave after giving birth
  </a>,
  ".",
]
`;

exports[`Success renders content tailored to Family (Bonding Newborn) 1`] = `
<Fragment>
  <Title>
    You submitted your application
  </Title>
  <p
    className="margin-bottom-5"
  >
    <Trans
      i18nKey="pages.claimsSuccess.claimantApplicationId"
      values={
        Object {
          "absence_id": "NTN-111-ABS-01",
        }
      }
    />
  </p>
  <div
    className="measure-6"
  >
    <Heading
      level="2"
    >
      <SvgIconPhone
        className="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height={30}
        width={30}
      />
      We may need more information from you
    </Heading>
    <Trans
      components={
        Object {
          "contact-center-phone-link": <a
            href="tel:(833) 344-7365"
          />,
          "li": <li />,
          "reductions-employer-benefits-link": <a
            href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefit-reductions#earned-time-off-through-your-employer-"
          />,
          "reductions-overview-link": <a
            href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefit-reductions"
          />,
          "ul": <ul
            className="usa-list"
          />,
        }
      }
      i18nKey="pages.claimsSuccess.reportReductionsProcess"
    />
    <Heading
      level="2"
    >
      <SvgIconCalendar
        className="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height={30}
        width={30}
      />
      What happens next
    </Heading>
    <Trans
      components={
        Object {
          "contact-center-phone-link": <a
            href="tel:(833) 344-7365"
          />,
          "li": <li />,
          "ul": <ul
            className="usa-list"
          />,
        }
      }
      i18nKey="pages.claimsSuccess.adjudicationProcess"
      tOptions={
        Object {
          "context": "leaveNotInFuture",
        }
      }
    />
    <div
      className="padding-top-2 margin-top-2"
    >
      <Heading
        level="2"
      >
        <SvgIconCopy
          className="margin-right-2 text-secondary text-middle"
          fill="currentColor"
          height={30}
          width={30}
        />
        If you gave birth, you may also be eligible for paid medical leave
      </Heading>
      <p>
        <Trans
          components={
            Object {
              "contact-center-phone-link": <a
                href="tel:(833) 344-7365"
              />,
              "medical-bonding-link": <a
                href="https://www.mass.gov/pfml-medical-bonding"
              />,
            }
          }
          i18nKey="pages.claimsSuccess.medicalLeaveAfterBirth"
        />
      </p>
    </div>
    <UserFeedback
      url="https://www.mass.gov/paidleave-claimant-feedback"
    />
    <ButtonLink
      className="margin-top-4"
      href="/applications"
    >
      Return to applications
    </ButtonLink>
  </div>
</Fragment>
`;

exports[`Success renders content tailored to Family (Bonding Newborn) 2`] = `
Array [
  "Your application ID is ",
  <strong
    key="strong-1"
  >
    NTN-111-ABS-01
  </strong>,
]
`;

exports[`Success renders content tailored to Family (Bonding Newborn) 3`] = `
Array [
  <p
    key="p-0"
  >
    Call the Contact Center at 
    <a
      href="tel:(833) 344-7365"
      key="1"
    >
      (833) 344‑7365
    </a>
     if you’ll receive:
  </p>,
  <ul
    className="usa-list"
    key="1"
  >
    <li
      key="0"
    >
      Any 
      <a
        href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefit-reductions#earned-time-off-through-your-employer-"
        key="1"
      >
        benefits from your employer
      </a>
       that you’ll be using in addition to Massachusetts paid leave (for example, maternity leave, or paid sick time)
    </li>
    <li
      key="1"
    >
      Income from 
      <a
        href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefit-reductions"
        key="1"
      >
        any other sources
      </a>
       during your leave
    </li>
  </ul>,
]
`;

exports[`Success renders content tailored to Family (Bonding Newborn) 4`] = `
<ul
  className="usa-list"
  key="0"
>
   
  <li
    key="1"
  >
    Your employer has 10 business days to provide feedback on your application.
  </li>
   
  <li
    key="3"
  >
    We’ll confirm your eligibility and make sure that your documents are valid.
  </li>
   
  <li
    key="5"
  >
    After we’ve made a decision, you’ll receive an email notification with a link to details about the decision. Your employer will also get a copy of the decision.
  </li>
  <li
    key="6"
  >
    Once your application is approved, you can expect your first payment to arrive at the beginning of your fourth week of leave, if your leave has already started. If your leave starts in the future, you can expect your first payment 2-4 weeks after your leave starts. After that, you will receive your payments every week.
  </li>
</ul>
`;

exports[`Success renders content tailored to Family (Bonding Newborn) 5`] = `
Array [
  "You can take up to 20 weeks of paid medical leave if you’re unable to work during your pregnancy and to recover from childbirth. Your health care provider determines how much medical leave you will need. Call the Contact Center at ",
  <a
    href="tel:(833) 344-7365"
    key="1"
  >
    (833) 344‑7365
  </a>,
  " if you need ",
  <a
    href="https://www.mass.gov/pfml-medical-bonding"
    key="3"
  >
    medical leave after giving birth
  </a>,
  ".",
]
`;

exports[`Success renders content tailored to Medical (Not pregnant) 1`] = `
<Fragment>
  <Title>
    You submitted your application
  </Title>
  <p
    className="margin-bottom-5"
  >
    <Trans
      i18nKey="pages.claimsSuccess.claimantApplicationId"
      values={
        Object {
          "absence_id": "NTN-111-ABS-01",
        }
      }
    />
  </p>
  <div
    className="measure-6"
  >
    <Heading
      level="2"
    >
      <SvgIconPhone
        className="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height={30}
        width={30}
      />
      We may need more information from you
    </Heading>
    <Trans
      components={
        Object {
          "contact-center-phone-link": <a
            href="tel:(833) 344-7365"
          />,
          "li": <li />,
          "reductions-employer-benefits-link": <a
            href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefit-reductions#earned-time-off-through-your-employer-"
          />,
          "reductions-overview-link": <a
            href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefit-reductions"
          />,
          "ul": <ul
            className="usa-list"
          />,
        }
      }
      i18nKey="pages.claimsSuccess.reportReductionsProcess"
    />
    <Heading
      level="2"
    >
      <SvgIconCalendar
        className="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height={30}
        width={30}
      />
      What happens next
    </Heading>
    <Trans
      components={
        Object {
          "contact-center-phone-link": <a
            href="tel:(833) 344-7365"
          />,
          "li": <li />,
          "ul": <ul
            className="usa-list"
          />,
        }
      }
      i18nKey="pages.claimsSuccess.adjudicationProcess"
      tOptions={
        Object {
          "context": "leaveNotInFuture",
        }
      }
    />
    <UserFeedback
      url="https://www.mass.gov/paidleave-claimant-feedback"
    />
    <ButtonLink
      className="margin-top-4"
      href="/applications"
    >
      Return to applications
    </ButtonLink>
  </div>
</Fragment>
`;

exports[`Success renders content tailored to Medical (Not pregnant) 2`] = `
Array [
  "Your application ID is ",
  <strong
    key="strong-1"
  >
    NTN-111-ABS-01
  </strong>,
]
`;

exports[`Success renders content tailored to Medical (Not pregnant) 3`] = `
Array [
  <p
    key="p-0"
  >
    Call the Contact Center at 
    <a
      href="tel:(833) 344-7365"
      key="1"
    >
      (833) 344‑7365
    </a>
     if you’ll receive:
  </p>,
  <ul
    className="usa-list"
    key="1"
  >
    <li
      key="0"
    >
      Any 
      <a
        href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefit-reductions#earned-time-off-through-your-employer-"
        key="1"
      >
        benefits from your employer
      </a>
       that you’ll be using in addition to Massachusetts paid leave (for example, maternity leave, or paid sick time)
    </li>
    <li
      key="1"
    >
      Income from 
      <a
        href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefit-reductions"
        key="1"
      >
        any other sources
      </a>
       during your leave
    </li>
  </ul>,
]
`;

exports[`Success renders content tailored to Medical (Not pregnant) 4`] = `
<ul
  className="usa-list"
  key="0"
>
   
  <li
    key="1"
  >
    Your employer has 10 business days to provide feedback on your application.
  </li>
   
  <li
    key="3"
  >
    We’ll confirm your eligibility and make sure that your documents are valid.
  </li>
   
  <li
    key="5"
  >
    After we’ve made a decision, you’ll receive an email notification with a link to details about the decision. Your employer will also get a copy of the decision.
  </li>
  <li
    key="6"
  >
    Once your application is approved, you can expect your first payment to arrive at the beginning of your fourth week of leave, if your leave has already started. If your leave starts in the future, you can expect your first payment 2-4 weeks after your leave starts. After that, you will receive your payments every week.
  </li>
</ul>
`;

exports[`Success renders content tailored to Medical (Pregnant) 1`] = `
<Fragment>
  <Title>
    You submitted your application
  </Title>
  <p
    className="margin-bottom-5"
  >
    <Trans
      i18nKey="pages.claimsSuccess.claimantApplicationId"
      values={
        Object {
          "absence_id": "NTN-111-ABS-01",
        }
      }
    />
  </p>
  <div
    className="measure-6"
  >
    <Heading
      level="2"
    >
      <SvgIconPhone
        className="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height={30}
        width={30}
      />
      We may need more information from you
    </Heading>
    <Trans
      components={
        Object {
          "contact-center-phone-link": <a
            href="tel:(833) 344-7365"
          />,
          "li": <li />,
          "reductions-employer-benefits-link": <a
            href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefit-reductions#earned-time-off-through-your-employer-"
          />,
          "reductions-overview-link": <a
            href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefit-reductions"
          />,
          "ul": <ul
            className="usa-list"
          />,
        }
      }
      i18nKey="pages.claimsSuccess.reportReductionsProcess"
    />
    <Heading
      level="2"
    >
      <SvgIconCalendar
        className="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height={30}
        width={30}
      />
      What happens next
    </Heading>
    <Trans
      components={
        Object {
          "contact-center-phone-link": <a
            href="tel:(833) 344-7365"
          />,
          "li": <li />,
          "ul": <ul
            className="usa-list"
          />,
        }
      }
      i18nKey="pages.claimsSuccess.adjudicationProcess"
      tOptions={
        Object {
          "context": "leaveNotInFuture",
        }
      }
    />
    <div
      className="padding-top-2 margin-top-2"
    >
      <Heading
        level="2"
      >
        <SvgIconCopy
          className="margin-right-2 text-secondary text-middle"
          fill="currentColor"
          height={30}
          width={30}
        />
        You may also be eligible for paid family leave
      </Heading>
      <p>
        <Trans
          components={
            Object {
              "contact-center-phone-link": <a
                href="tel:(833) 344-7365"
              />,
              "medical-bonding-link": <a
                href="https://www.mass.gov/pfml-medical-bonding"
              />,
            }
          }
          i18nKey="pages.claimsSuccess.familyLeaveToBond"
        />
      </p>
    </div>
    <UserFeedback
      url="https://www.mass.gov/paidleave-claimant-feedback"
    />
    <ButtonLink
      className="margin-top-4"
      href="/applications"
    >
      Return to applications
    </ButtonLink>
  </div>
</Fragment>
`;

exports[`Success renders content tailored to Medical (Pregnant) 2`] = `
Array [
  "Your application ID is ",
  <strong
    key="strong-1"
  >
    NTN-111-ABS-01
  </strong>,
]
`;

exports[`Success renders content tailored to Medical (Pregnant) 3`] = `
Array [
  <p
    key="p-0"
  >
    Call the Contact Center at 
    <a
      href="tel:(833) 344-7365"
      key="1"
    >
      (833) 344‑7365
    </a>
     if you’ll receive:
  </p>,
  <ul
    className="usa-list"
    key="1"
  >
    <li
      key="0"
    >
      Any 
      <a
        href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefit-reductions#earned-time-off-through-your-employer-"
        key="1"
      >
        benefits from your employer
      </a>
       that you’ll be using in addition to Massachusetts paid leave (for example, maternity leave, or paid sick time)
    </li>
    <li
      key="1"
    >
      Income from 
      <a
        href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefit-reductions"
        key="1"
      >
        any other sources
      </a>
       during your leave
    </li>
  </ul>,
]
`;

exports[`Success renders content tailored to Medical (Pregnant) 4`] = `
<ul
  className="usa-list"
  key="0"
>
   
  <li
    key="1"
  >
    Your employer has 10 business days to provide feedback on your application.
  </li>
   
  <li
    key="3"
  >
    We’ll confirm your eligibility and make sure that your documents are valid.
  </li>
   
  <li
    key="5"
  >
    After we’ve made a decision, you’ll receive an email notification with a link to details about the decision. Your employer will also get a copy of the decision.
  </li>
  <li
    key="6"
  >
    Once your application is approved, you can expect your first payment to arrive at the beginning of your fourth week of leave, if your leave has already started. If your leave starts in the future, you can expect your first payment 2-4 weeks after your leave starts. After that, you will receive your payments every week.
  </li>
</ul>
`;

exports[`Success renders content tailored to Medical (Pregnant) 5`] = `
Array [
  "You can take up to 12 weeks of paid family leave to bond with your child after your medical leave ends. Family leave to bond with your child can be ",
  <a
    href="https://www.mass.gov/pfml-medical-bonding"
    key="1"
  >
    easily added to your claim
  </a>,
  " by calling our Contact Center at ",
  <a
    href="tel:(833) 344-7365"
    key="3"
  >
    (833) 344‑7365
  </a>,
  ".",
]
`;

exports[`Success renders content tailored to Medical (Pregnant, applying in advance) 1`] = `
<Fragment>
  <Title>
    You submitted your application
  </Title>
  <p
    className="margin-bottom-5"
  >
    <Trans
      i18nKey="pages.claimsSuccess.claimantApplicationId"
      values={
        Object {
          "absence_id": "NTN-111-ABS-01",
        }
      }
    />
  </p>
  <div
    className="measure-6"
  >
    <Alert
      autoWidth={true}
      state="warning"
    >
      <Trans
        components={
          Object {
            "contact-center-phone-link": <a
              href="tel:(833) 344-7365"
            />,
          }
        }
        i18nKey="pages.claimsSuccess.proofRequired"
        tOptions={
          Object {
            "context": "medicalPregnantFuture",
          }
        }
      />
    </Alert>
    <Heading
      level="2"
    >
      <SvgIconPhone
        className="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height={30}
        width={30}
      />
      We may need more information from you
    </Heading>
    <Trans
      components={
        Object {
          "contact-center-phone-link": <a
            href="tel:(833) 344-7365"
          />,
          "li": <li />,
          "reductions-employer-benefits-link": <a
            href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefit-reductions#earned-time-off-through-your-employer-"
          />,
          "reductions-overview-link": <a
            href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefit-reductions"
          />,
          "ul": <ul
            className="usa-list"
          />,
        }
      }
      i18nKey="pages.claimsSuccess.reportReductionsProcess"
    />
    <Heading
      level="2"
    >
      <SvgIconCalendar
        className="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height={30}
        width={30}
      />
      What happens next
    </Heading>
    <Trans
      components={
        Object {
          "contact-center-phone-link": <a
            href="tel:(833) 344-7365"
          />,
          "li": <li />,
          "ul": <ul
            className="usa-list"
          />,
        }
      }
      i18nKey="pages.claimsSuccess.adjudicationProcess"
      tOptions={
        Object {
          "context": "medicalPregnantFuture",
        }
      }
    />
    <div
      className="padding-top-2 margin-top-2"
    >
      <Heading
        level="2"
      >
        <SvgIconCopy
          className="margin-right-2 text-secondary text-middle"
          fill="currentColor"
          height={30}
          width={30}
        />
        You may also be eligible for paid family leave
      </Heading>
      <p>
        <Trans
          components={
            Object {
              "contact-center-phone-link": <a
                href="tel:(833) 344-7365"
              />,
              "medical-bonding-link": <a
                href="https://www.mass.gov/pfml-medical-bonding"
              />,
            }
          }
          i18nKey="pages.claimsSuccess.familyLeaveToBond"
        />
      </p>
    </div>
    <UserFeedback
      url="https://www.mass.gov/paidleave-claimant-feedback"
    />
    <ButtonLink
      className="margin-top-4"
      href="/applications"
    >
      Return to applications
    </ButtonLink>
  </div>
</Fragment>
`;

exports[`Success renders content tailored to Medical (Pregnant, applying in advance) 2`] = `
Array [
  "Your application ID is ",
  <strong
    key="strong-1"
  >
    NTN-111-ABS-01
  </strong>,
]
`;

exports[`Success renders content tailored to Medical (Pregnant, applying in advance) 3`] = `
Array [
  "You must call the Contact Center at ",
  <a
    href="tel:(833) 344-7365"
    key="1"
  >
    (833) 344‑7365
  </a>,
  " once your medical leave begins to confirm that your leave has begun. We can’t approve your application until we hear from you.",
]
`;

exports[`Success renders content tailored to Medical (Pregnant, applying in advance) 4`] = `
Array [
  <p
    key="p-0"
  >
    Call the Contact Center at 
    <a
      href="tel:(833) 344-7365"
      key="1"
    >
      (833) 344‑7365
    </a>
     if you’ll receive:
  </p>,
  <ul
    className="usa-list"
    key="1"
  >
    <li
      key="0"
    >
      Any 
      <a
        href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefit-reductions#earned-time-off-through-your-employer-"
        key="1"
      >
        benefits from your employer
      </a>
       that you’ll be using in addition to Massachusetts paid leave (for example, maternity leave, or paid sick time)
    </li>
    <li
      key="1"
    >
      Income from 
      <a
        href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefit-reductions"
        key="1"
      >
        any other sources
      </a>
       during your leave
    </li>
  </ul>,
]
`;

exports[`Success renders content tailored to Medical (Pregnant, applying in advance) 5`] = `
<ul
  className="usa-list"
  key="0"
>
  <li
    key="0"
  >
    Your employer has 10 days to provide feedback on your application.
  </li>
   
  <li
    key="2"
  >
    When your leave begins, call the DFML Contact Center at 
    <a
      href="tel:(833) 344-7365"
      key="1"
    >
      (833) 344‑7365
    </a>
     to tell us. Then we’ll confirm your eligibility and make sure that your documents are valid.
  </li>
   
  <li
    key="4"
  >
    After we’ve made a decision, you’ll receive an email notification with a link to details about the decision.
  </li>
  <li
    key="5"
  >
    If your application is approved prior to your leave, you can expect your first payment to arrive about 3 weeks after your leave starts. Otherwise, you can expect your first payment 2-3 weeks after your leave is approved.
  </li>
</ul>
`;

exports[`Success renders content tailored to Medical (Pregnant, applying in advance) 6`] = `
Array [
  "You can take up to 12 weeks of paid family leave to bond with your child after your medical leave ends. Family leave to bond with your child can be ",
  <a
    href="https://www.mass.gov/pfml-medical-bonding"
    key="1"
  >
    easily added to your claim
  </a>,
  " by calling our Contact Center at ",
  <a
    href="tel:(833) 344-7365"
    key="3"
  >
    (833) 344‑7365
  </a>,
  ".",
]
`;
